syntax = "proto3";

option csharp_namespace = "Api.Grpc";

service AuthValidationService {
  rpc Validate (ValidateRequest) returns (ValidateResult);
}

message ValidateRequest {
  string id = 1;
  string token = 2;
}

message ValidateResult {
  bool is_valid = 1;
  string user_id = 2;
  string roles = 3;
  string message = 4;
  int64 expires_at = 5;
}